# Python-Docker

./: Makefile  Project-Makefile  README.md
DockerCompose/: docker-compose-local.yaml  docker-compose-w-postgres.yaml  docker-compose.yaml
DockerCompose/postgres/: docker-compose.yaml
DockerFile/: Dockerfile.base  Dockerfile.base.3.9  Dockerfile.local  Dockerfile.production
Env/: base.env  local.env  postgres.env
Scripts/Entrypoints/: alembic.sh  postgres-main.sh  postgres-test.sh  production-entrypoint.sh
Scripts/Entrypoints/postgres/: migrate.sh  postgres-main.sh
config/docker/: .dockerignore
examples/: Project-Makefile  logging.conf  pyproject.toml
examples/docker/compose/: docker-compose-local.yaml  docker-compose.base.yaml  docker-compose.local.yaml  docker-compose.rabbitmq.yaml
examples/docker/compose/postgres/: docker-compose.yaml
examples/docker/scripts/entrypoints/: alembic.sh
